--- a/app/views/forms/_sign_in.html.erb
+++ b/app/views/forms/_sign_in.html.erb
@@ -1,24 +1,28 @@
-
-
 <%= form_for(resource, as: resource_name, url: session_path(resource_name)) do |f| %>
-  
-    <%= f.label :email%>
-    <%= f.email_field :email, autofocus: true %>
-  
+  <div class="field is-horizontal">
+    <%= f.label :email, class: "field-label" %>
+    <div class="control">
+    <%= f.email_field :email, autofocus: true, class: "input is-small" %>
+    </div>
+  </div>
 
-  
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: "off" %>
-  
+  <div class="field is-horizontal">
+    <%= f.label :password, class: "field-label" %>
+    <div class="control">
+    <%= f.password_field :password, autocomplete: "off", class: "input is-small" %>
+    </div>
+  </div>  
+ 
 
   <% if devise_mapping.rememberable? -%>
     <div class="field">
       <%= f.check_box :remember_me %>
       <%= f.label :remember_me %>
-    </div>
+    
   <% end -%>
 
   <div class="actions">
-    <%= f.submit "Log in" %>
+    <%= f.submit "Log in", class: "button is-danger is-inverted is-small" %>
+  </div>
   </div>
 <% end %>
