--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
   </head>
   <body>
   	<%= render 'defaults/header' %>
-  	<div class="container">
+  	<div class="container-fluid">
     	<%= yield %>
+    <%= render 'defaults/footer' %>  
   	</div>
   </body>
 </html>
