--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,5 @@
-<%= render 'forms/signup' %>
-
+<div class="columns">
+  <div class="column is-three-fifths">Some Text</div>
+  <div class="column">Some more text</div>
+  <div class="column"><%= render 'forms/signup' %></div>
+</div>
