--- a/app/views/defaults/_header.html.erb
+++ b/app/views/defaults/_header.html.erb
@@ -6,8 +6,13 @@
       <%= link_to "About", about_path, class: "navbar-item" %>
     </div>
   </div>
-
+  <% if user_signed_in? %>
+  <div class="navbar-end">
+    <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-item" %>
+  </div>
+  <% else %>
   <div class="navbar-end">
      <%= render 'forms/sign_in' %>
-  </div>     
+  </div> 
+  <% end %>    
 </nav>
