--- a/app/views/defaults/_header.html.erb
+++ b/app/views/defaults/_header.html.erb
@@ -2,7 +2,6 @@
   <div class="navbar-brand">
     <%= link_to "Vladbook", root_path, class: "navbar-item" %>
     <div class="navbar-start">
-      <%= link_to "Home", home_path, class: "navbar-item" %>
       <%= link_to "About", about_path, class: "navbar-item" %>
     </div>
   </div>
@@ -11,8 +10,11 @@
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-item" %>
   </div>
   <% else %>
+  <div class="navbar-start">
+      <%= link_to "Home", home_path, class: "navbar-item" %>
+  </div> 
   <div class="navbar-end">
      <%= render 'forms/sign_in' %>
-  </div> 
+  </div>
   <% end %>    
 </nav>
