--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,11 @@
     <%= render 'defaults/rails_defaults' %>
   </head>
   <body>
-  	<%= render 'defaults/header' %>
-  	<div class="container-fluid">
+    <%= render 'defaults/header' %>
     	<%= yield %>
-    <%= render 'defaults/footer' %>  
-  	</div>
+    <div class="section">
+      <%= debug(params) if Rails.env.development? %>
+    </div>
+    <%= render 'defaults/footer' %>
   </body>
 </html>
