--- a/app/views/defaults/_header.html.erb
+++ b/app/views/defaults/_header.html.erb
@@ -1,11 +1,29 @@
 <nav class="navbar is-danger" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <%= link_to "Vladbook", root_path, class: "navbar-item" %>
-    <div class="navbar-start">
-      <%= link_to "About", about_path, class: "navbar-item" %>
-    </div>
+
   </div>
   <% if user_signed_in? %>
+    <div class="navbar-item has-dropdown is-hoverable">
+    <a class="navbar-link">
+      Menu
+    </a>
+    <div class="navbar-dropdown">
+      <a class="navbar-item">
+        Overview
+      </a>
+      <a class="navbar-item">
+        Elements
+      </a>
+      <a class="navbar-item">
+        Components
+      </a>
+      <hr class="navbar-divider">
+      <div class="navbar-item">
+        Version 0.6.0
+      </div>
+    </div>
+  </div>
   <div class="navbar-end">
     <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-item" %>
   </div>
