adding avatar for each user

--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,6 +1,11 @@
+
 <%= form_for(@avatar, url: photos_path) do |f| %>
   <%= f.submit "Post", class: "btn btn-primary" %>
   <span class="picture">
     <%= f.file_field :picture %>
   </span>
 <% end %>
+
+<%= image_tag @avatar.picture %>
+
+
