--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,46 +1,15 @@
-<div class="column is-4 is-offset-8">
-  <div class="content">
-  <h1>Sign up</h1>
-  </div>
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <div class="control">
-    <%= f.label :first_name, class: "label" %>
-    <%= f.text_field :name, autofocus: true, class: "input is-primary" %>
+<section class="hero is-info">
+  <div class="hero-body">
+    <div class="container">
+      <div class="column is-half is-offset-one-quarter">
+      <h1 class="title">
+        Sign up
+      </h1>
+      <h2 class="subtitle">
+        sign up for an account right now
+      </h2>
+        <%= render 'sign_up' %>    
+      </div>
     </div>
   </div>
-
-  <div class="field">
-    <div class="control">
-    <%= f.label :last_name, class: "label" %>
-    <%= f.text_field :surname, autofocus: true, class: "input is-primary" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <div class="control">
-    <%= f.label :email, class: "label" %>
-    <%= f.email_field :email, autofocus: true, class: "input is-primary" %>
-    </div>
-  </div>
-
-  <div class="field">
-    <%= f.label :password, class: "label" %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %>
-    <%= f.password_field :password, autocomplete: "off",class: "input is-primary" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, class: "label" %>
-    <%= f.password_field :password_confirmation, autocomplete: "off" , class: "input is-primary"%>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up", class: "button is-primary" %>
-  </div>
-<% end %>
-</div>
+</section>
