--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   </head>
   <body>
     <%= render 'defaults/header' %>
+    <%= render 'layouts/flash_messages' %>
     	<%= yield %>
     <div class="section">
       <%= debug(params) if Rails.env.development? %>
