finished personal profiledashboard

--- a/app/views/defaults/_header.html.erb
+++ b/app/views/defaults/_header.html.erb
@@ -32,7 +32,9 @@
       <%= link_to "Home", home_path, class: "navbar-item" %>
   </div> 
   <div class="navbar-end">
+    <div class="section">
      <%= render 'forms/sign_in' %>
+   </div>
   </div>
   <% end %>    
 </nav>
