--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,29 +1,24 @@
+<div class="section hero is-primary">
+	<h1 class="title">
+      My Stats
+   </h1>
+  <%= render 'profile_bar' %>
+</div>
+<div class="columns">
+  <div class="column is-three-fifths">
+    <%= render 'menu' %>
+  </div>
+  <div class="column"><%= render 'personal_card' %></div>
+</div>
 
-<%= image_tag @avatar.picture %>
 
-<% if user_has_avatar? %>
-<%= form_for(@avatar, url: photo_path) do |f| %>
-  <%= f.submit "Update Profile", class: "btn btn-primary" %>
-  <span class="picture">
-    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
-  </span>
-<% end %>
-<% else %>
-<%= form_for(@avatar, url: photo_path) do |f| %>
-  <%= f.submit "Set Photo", class: "btn btn-primary" %>
-  <span class="picture">
-    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
-  </span>
-<% end %>
-<% end %>
+
+
+
+
+
+
   
 
-<script type="text/javascript">
-  $('#micropost_picture').bind('change', function() {
-    var size_in_megabytes = this.files[0].size/1024/1024;
-    if (size_in_megabytes > 5) {
-      alert('Maximum file size is 5MB. Please choose a smaller file.');
-    }
-  });
-</script>
+
 
