--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -10,10 +10,18 @@
     <tr>
       <td><%= users.name %></td>
       <td><%= users.surname %></td>
-      <td><%= form_for(current_user, url: friendships_path, method: :post) do |f| %>
+      <td>
+        <% if current_user.added?(users) %>
+          <%= form_for(current_user, url: friendship_path, method: :delete) do |f| %>
+        <%= hidden_field_tag :requested_id, users.id %>
+        <%= f.submit "Cancle Request", class: "button is-primary is-small" %>
+        <% end %>
+        <% else %>  
+        <%= form_for(current_user, url: friendships_path, method: :post) do |f| %>
       	<%= hidden_field_tag :requested_id, users.id %>
       	<%= f.submit "Add Friend", class: "button is-primary is-small" %>
       	<% end %>
+        <% end %>
 
       </td>	
     </tr>
