--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -33,3 +33,8 @@
     color: #468847;
     text-align: left;
  }
+
+div.column.is-half.is-offset-one-quarter.custom {
+    background-color: aliceblue;
+    box-shadow: 5px 5px 5px #888888;
+}
