--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -38,3 +38,7 @@ div.column.is-half.is-offset-one-quarter.custom {
     background-color: aliceblue;
     box-shadow: 5px 5px 5px #888888;
 }
+
+.media {
+background-color: aliceblue;
+}
