--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-    <article class="media">
+<article class="media">
       <figure class="media-left">
         <p class="image is-48x48">
           <img src="https://bulma.io/images/placeholders/96x96.png">
@@ -7,13 +7,18 @@
       <div class="media-content">
         <div class="content is-small">
           <p>
-            <strong>Kayli Eunice </strong>
+            <strong><%= comment.user.name %></strong>
             <br>
-            <%= comment.content %>
+              <%= comment.content %>
             <br>
-            <small><a>Like</a> · <a>Reply</a> · 2 hrs</small>
+            <small><% if liked_comment?(comment,current_user) %>
+          <%= link_to "Like", like_path(get_comment_like_id(current_user,comment)), method: :delete %>(<%= comment.likes.count %>) 
+          <% else %>
+              <%= link_to "Like", likes_path(current_user: current_user.id, likable_id: comment.id, likable_type: "Comment"), method: :post %>(<%= comment.likes.count %>) 
+                <% end %>
+                · <%= link_to "Delete", comment_path(comment), method: :delete %> · 2 hrs</small>
           </p>
-          
         </div>
       </div>
     </article>
+
