--- a/app/views/comments/_comments_form.html.erb
+++ b/app/views/comments/_comments_form.html.erb
@@ -1,8 +1,13 @@
+  <div class="field">
+        <div class="control">
+          <%= form_for(:comment, url: comments_path) do |f| %>
+          <%= f.text_area :content, size: "50x3" %>
+          <%= f.hidden_field :post_id, value: post_id %>
     <div class="field">
-      <div class="control">
-        <%= form_for(:comment, url: comments_path) do |f| %>
-        <%= f.text_area :content, size: "50x4", placeholder: "Write something for #{@user.name}..." %> 
-        <%= f.submit "Comment", class: "button is-info is-small" %>
+      <p class="control">
+        <%= f.submit "comment", class: "button is-info is-small" %>
         <% end %>
-      </div>
+      </p>
+      </div> 
     </div>
+   </div>
