--- a/app/views/static_pages/feed.html.erb
+++ b/app/views/static_pages/feed.html.erb
@@ -15,82 +15,8 @@
   <div class="column is-half is-offset-one-quarter custom">
     <%= render 'posts/form' %>
   </div>
+ <hr> 
 
-
-
-<hr>
-<div class="column is-half is-offset-one-quarter custom">
-    <% @posts.each do |post| %>
-<article class="media">
-  <figure class="media-left">
-    <p class="image is-64x64">
-      <img src="https://bulma.io/images/placeholders/128x128.png">
-    </p>
-  </figure>
-  <div class="media-content">
-    <div class="content">
-      <p>
-        <strong><%= post.user.name.capitalize %></strong>
-        <br>
-        <%= post.content %>
-        <br>
-        <small>
-          <% if liked_post?(post,current_user) %>
-          <%= link_to "Like", like_path(post.likes.where(user_id: current_user.id).first.id), method: :delete %>(<%= post.likes.count %>) 
-          <% else %>
-          <%= link_to "Like", likes_path(current_user: current_user.id, likable_id: post.id, likable_type: "Post"), method: :post %>(<%= post.likes.count %>) 
-          <% end %>
-            · <%= link_to "Delete", post_path(post), method: :delete %> · 3 hrs</small>
-      </p>
-    </div>
-    <% post.comments.each do |comment| %>
-    <article class="media">
-      <figure class="media-left">
-        <p class="image is-48x48">
-          <img src="https://bulma.io/images/placeholders/96x96.png">
-        </p>
-      </figure>
-      <div class="media-content">
-        <div class="content is-small">
-          <p>
-            <strong><%= comment.user.name %></strong>
-            <br>
-              <%= comment.content %>
-            <br>
-            <small>
-          <% if liked_comment?(comment,current_user) %>
-          <%= link_to "Like", like_path(comment.likes.where(user_id: current_user.id).first.id), method: :delete %>(<%= comment.likes.count %>) 
-          <% else %>
-              <%= link_to "Like", likes_path(current_user: current_user.id, likable_id: comment.id, likable_type: "Comment"), method: :post %>(<%= comment.likes.count %>) 
-                <% end %>
-                · <%= link_to "Delete", comment_path(comment), method: :delete %> · 2 hrs</small>
-          </p>
-        </div>
-      </div>
-    </article>
-    <% end %>
-    <article class="media">
-      <div class="media-content">
-        <div class="content is-small">
-            <br>
-        <div class="field">
-          <div class="control">
-       <%= form_for(:comment, url: comments_path) do |f| %>
-       <%= f.text_area :content, size: "50x3" %>
-       <%= f.hidden_field :post_id, value: post.id %>
-       <div class="field">
-      <p class="control">
-        <%= f.submit "comment", class: "button is-info is-small" %>
-        <% end %>
-      </p>
-    </div> 
-        </div>
-          </div>
-          </p>
-        </div>
-    </article>
-</article>
-<% end %>
-</div>
-</article>
+<div class="column is-half is-offset-one-quarter">
+  <%= render @posts %>
 </div>
