--- a/app/views/users/_image_form.html.erb
+++ b/app/views/users/_image_form.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(@avatar, url: photo_path) do |f| %>
   <%= f.submit "Update Profile", class: "btn btn-primary" %>
   <span class="picture">
-    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+    <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png', required: true %>
   </span>
 <% end %>
 <% else %>
