--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,15 +1,137 @@
-<div class="section hero is-primary">
-	<h1 class="title">
-      My Stats
-   </h1>
-  <%= render 'profile_bar' %>
-</div>
-<div class="columns">
-  <div class="column is-three-fifths">
-    <%= render 'menu' %>
-  </div>
-  <div class="column"><%= render 'personal_card' %></div>
-</div>
+ <!-- END NAV -->
+  <div class="container">
+    <div class="columns">
+      <div class="column is-3">
+        <aside class="menu">
+          <p class="menu-label">
+            General
+          </p>
+          <ul class="menu-list">
+    				<li><a class="is-active">Dashboard</a></li>
+    				<li><%= link_to "Find Friends", search_path %></li>
+    				<li><%= link_to "News Feed", feed_path %>
+            
+          </ul>
+        </aside>
+      </div>
+      <div class="column is-9">
+        <section class="hero is-info welcome is-small">
+          <div class="hero-body">
+            <div class="container">
+              <h1 class="title">
+                Hello, <%= current_user.name %>
+              </h1>
+              <h2 class="subtitle">
+                I hope you are having a great day!
+              </h2>
+            </div>
+          </div>
+        </section>
+        <section class="info-tiles">
+          <div class="tile is-ancestor has-text-centered">
+            <div class="tile is-parent">
+              <article class="tile is-child box">
+                <p class="title">439k</p>
+                <p class="subtitle">Friend Requests</p>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child box">
+                <p class="title">59k</p>
+                <p class="subtitle">Posts</p>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child box">
+                <p class="title">3.4k</p>
+                <p class="subtitle">Likes</p>
+              </article>
+            </div>
+            <div class="tile is-parent">
+              <article class="tile is-child box">
+                <p class="title">19</p>
+                <p class="subtitle">Comments</p>
+              </article>
+            </div>
+          </div>
+        </section>
+        <div class="columns">
+          <div class="column is-6">
+            <div class="card events-card">
+              <header class="card-header">
+                <p class="card-header-title">
+                  Friend Requests
+                </p>
+                <a href="#" class="card-header-icon" aria-label="more options">
+                  <span class="icon">
+                    <i class="fa fa-angle-down" aria-hidden="true"></i>
+                  </span>
+                </a>
+              </header>
+              <div class="card-table">
+                <div class="content">
+                  <table class="table is-fullwidth is-striped">
+                    <tbody>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>John Hone</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Dave Norris</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Dick Fuck</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Poo Head</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Fucky McFuck</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Dick Face</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Duck Face</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Poop More Poop</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                      <tr>
+                        <td width="5%"><i class="fa fa-bell-o"></i></td>
+                        <td>Malika Cockstar</td>
+                        <td><a class="button is-small is-primary" href="#">Accept</a></td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>        
+          </div>
+          <div class="column is-6">
+          		<%= render 'personal_card' %>
+          	</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
 
 
